# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "//tools:drake.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_library(
    name = "simulated_schunk_wsg_system",
    srcs = ["simulated_schunk_wsg_system.cc"],
    hdrs = ["simulated_schunk_wsg_system.h"],
    deps = [
        "//drake/common:find_resource",
        "//drake/multibody/parsers",
        "//drake/multibody/rigid_body_plant",
    ],
)

drake_cc_binary(
    name = "wheel_hands_lift",
    srcs = ["wheel_hands_lift.cc"],
    data = [
        "models/test_lifter.sdf",
        "//drake/manipulation/models/wsg_50_description:models",
        "models/schunk_wsg_50_wheel_fingers.sdf",
        "//drake/multibody:models",
    ],
    deps = [
        "//drake/common:essential",
        "//drake/common:find_resource",
        "//drake/common/trajectories:piecewise_polynomial_trajectory",
        "//drake/common/trajectories:trajectory",
        "//drake/lcm",
        "//drake/multibody:rigid_body_tree",
        "//drake/multibody:rigid_body_tree_construction",
        "//drake/multibody/parsers",
        "//drake/multibody/rigid_body_plant",
        "//drake/multibody/rigid_body_plant:contact_results_to_lcm",
        "//drake/multibody/rigid_body_plant:drake_visualizer",
        ":simulated_schunk_wsg_system",
        "//drake/systems/analysis",
        "//drake/systems/controllers:pid_controlled_system",
        "//drake/systems/framework:diagram_builder",
        "//drake/systems/primitives:adder",
        "//drake/systems/primitives:constant_vector_source",
        "//drake/systems/primitives:integrator",
        "//drake/systems/primitives:matrix_gain",
        "//drake/systems/primitives:multiplexer",
        "//drake/systems/primitives:trajectory_source",
        "@gflags",
    ],
)

add_lint_tests()
